--- a/public/landing/css/style.css
+++ b/public/landing/css/style.css
@@ -1385,3 +1385,345 @@ h1, h2, h3, h4, h5,
 
 .single-content {
   font-size: .9rem; }
+
+  .job_listing_area .job_lists {
+  margin-top: 50px;
+}
+
+/* line 18, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs {
+  padding: 30px;
+  margin-bottom: 12px;
+  border: 1px solid transparent;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
+@media (max-width: 767px) {
+  /* line 18, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+  .job_listing_area .job_lists .single_jobs {
+    display: block !important;
+  }
+}
+
+@media (max-width: 767px) {
+  /* line 27, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+  .job_listing_area .job_lists .single_jobs .jobs_left {
+    display: block !important;
+    overflow: hidden;
+  }
+}
+
+/* line 46, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent {
+  float: left;
+}
+
+/* line 48, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent h4 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  font-weight: 400;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+@media (max-width: 767px) {
+  /* line 48, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+  .job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent h4 {
+    margin-top: 15px;
+  }
+}
+
+/* line 56, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent h4:hover {
+  color: #155632;
+}
+
+@media (max-width: 767px) {
+  /* line 60, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+  .job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent .links_locat {
+    display: block !important;
+  }
+}
+
+/* line 64, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent .links_locat .location {
+  margin-right: 50px;
+}
+
+@media (max-width: 767px) {
+  /* line 64, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+  .job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent .links_locat .location {
+    margin-right: 10px;
+  }
+}
+
+/* line 69, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent .links_locat .location p {
+  margin-bottom: 0;
+  font-size: 16px;
+  color: #AAB1B7;
+}
+
+/* line 73, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent .links_locat .location p i {
+  margin-right: 7px;
+}
+
+@media (max-width: 767px) {
+  /* line 82, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+  .job_listing_area .job_lists .single_jobs .jobs_right .apply_now {
+    margin: 10px 0;
+  }
+}
+
+/* line 87, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_right .apply_now a.heart_mark {
+  width: 40px;
+  height: 40px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  color: #155632;
+  font-size: 14px;
+  line-height: 40px;
+  text-align: center;
+  display: inline-block;
+  background: #EFFDF5;
+  margin-right: 15px;
+}
+
+/* line 98, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_right .apply_now a.heart_mark:hover {
+  background: #155632;
+  color: #fff;
+}
+
+/* line 103, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_right .apply_now a.boxed-btn3 {
+  padding: 9px 27px 9px 27px;
+  font-size: 14px;
+}
+
+/* line 109, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_right .date {
+  text-align: right;
+  margin-top: 10px;
+}
+
+@media (max-width: 767px) {
+  /* line 109, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+  .job_listing_area .job_lists .single_jobs .jobs_right .date {
+    text-align: left;
+  }
+}
+
+/* line 115, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_right .date p {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-style: italic;
+  color: #7A838B;
+}
+
+/* line 123, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs:hover {
+  border-color: #B2F2D0;
+}
+
+@media (max-width: 767px) {
+  /* line 27, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+  .job_listing_area .job_lists .single_jobs .jobs_left {
+    display: block !important;
+    overflow: hidden;
+  }
+}
+
+/* line 32, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_left .thumb img {
+  float: left;
+  width: 82px;
+  height: 82px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  margin-right: 25px;
+  border: 1px solid #F0F0F0;
+}
+
+/* line 46, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent {
+  float: left;
+}
+
+/* line 48, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent h4 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  font-weight: 400;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+@media (max-width: 767px) {
+  /* line 48, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+  .job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent h4 {
+    margin-top: 15px;
+  }
+}
+
+/* line 56, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent h4:hover {
+  color: #155632;
+}
+
+@media (max-width: 767px) {
+  /* line 60, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+  .job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent .links_locat {
+    display: block !important;
+  }
+}
+
+/* line 64, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent .links_locat .location {
+  margin-right: 50px;
+}
+
+@media (max-width: 767px) {
+  /* line 64, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+  .job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent .links_locat .location {
+    margin-right: 10px;
+  }
+}
+
+/* line 69, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent .links_locat .location p {
+  margin-bottom: 0;
+  font-size: 16px;
+  color: #AAB1B7;
+}
+
+/* line 73, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_left .jobs_conetent .links_locat .location p i {
+  margin-right: 7px;
+}
+
+@media (max-width: 767px) {
+  /* line 82, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+  .job_listing_area .job_lists .single_jobs .jobs_right .apply_now {
+    margin: 10px 0;
+  }
+}
+
+/* line 24, ../../Arafath/CL/December/235. Job board/HTML/scss/_btn.scss */
+.boxed-btn3 {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#F91842+0,fd8e5e+100 */
+  background: #155632;
+  color: #fff;
+  display: inline-block;
+  padding: 13px 29px 13px 29px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  border: 0;
+  border: 1px solid transparent;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  text-align: center;
+  color: #fff !important;
+  text-transform: capitalize;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+/* line 43, ../../Arafath/CL/December/235. Job board/HTML/scss/_btn.scss */
+.boxed-btn3:hover {
+  color: #155632 !important;
+  border: 1px solid #155632;
+  background: transparent;
+}
+
+/* line 48, ../../Arafath/CL/December/235. Job board/HTML/scss/_btn.scss */
+.boxed-btn3:focus {
+  outline: none;
+}
+
+/* line 79, ../../Arafath/CL/December/235. Job board/HTML/scss/_btn.scss */
+.boxed-btn3-line {
+  color: #F91842 !important;
+  display: inline-block;
+  padding: 14px 31px;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  border: 0;
+  border: 1px solid #F91842;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  text-align: center;
+  text-transform: capitalize;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+/* line 94, ../../Arafath/CL/December/235. Job board/HTML/scss/_btn.scss */
+.boxed-btn3-line:hover {
+  color: #fff !important;
+  border: 1px solid transparent;
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#F91842+0,fd8e5e+100 */
+  background: #fdae5c;
+  /* Old browsers */
+  background: -moz-linear-gradient(left, #fdae5c 0%, #fd8e5e 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, #fdae5c 0%, #fd8e5e 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #fdae5c 0%, #fd8e5e 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#F91842', endColorstr='#fd8e5e',GradientType=1 );
+  /* IE6-9 */
+}
+
+/* line 105, ../../Arafath/CL/December/235. Job board/HTML/scss/_btn.scss */
+.boxed-btn3-line:focus {
+  outline: none;
+}
+
+/* line 108, ../../Arafath/CL/December/235. Job board/HTML/scss/_btn.scss */
+.boxed-btn3-line.large-width {
+  width: 220px;
+}
+
+/* line 103, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_list.scss */
+.job_listing_area .job_lists .single_jobs .jobs_right .apply_now a.boxed-btn3 {
+  padding: 9px 27px 9px 27px;
+  font-size: 14px;
+}
+
+/* line 88, ../../Arafath/CL/December/235. Job board/HTML/scss/_job_details.scss */
+.job_details_area .single_jobs .jobs_right .apply_now a.boxed-btn3 {
+  padding: 9px 27px 9px 27px;
+  font-size: 14px;
+}
+
+section {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  }
